library/src/libqgraphicsitem.h

typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QRectF QRectF;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QWidget QWidget;
QGraphicsItemGroup* QGraphicsItemGroup_new();
QGraphicsItemGroup* QGraphicsItemGroup_new2(QGraphicsItem* parent);
void QGraphicsItemGroup_AddToGroup(QGraphicsItemGroup* self, QGraphicsItem* item);
void QGraphicsItemGroup_RemoveFromGroup(QGraphicsItemGroup* self, QGraphicsItem* item);
QRectF* QGraphicsItemGroup_BoundingRect(const QGraphicsItemGroup* self);
void QGraphicsItemGroup_Paint(QGraphicsItemGroup* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsItemGroup_IsObscuredBy(const QGraphicsItemGroup* self, QGraphicsItem* item);
QPainterPath* QGraphicsItemGroup_OpaqueArea(const QGraphicsItemGroup* self);
int QGraphicsItemGroup_Type(const QGraphicsItemGroup* self);