src/libqgraphicsitem.bf

public struct QGraphicsItemGroup
{
	[LinkName("QGraphicsItemGroup_new")]
	public static extern void* QGraphicsItemGroup_new();
	[LinkName("QGraphicsItemGroup_new2")]
	public static extern void* QGraphicsItemGroup_new2(QGraphicsItem parent);
	[LinkName("QGraphicsItemGroup_AddToGroup")]
	public static extern void QGraphicsItemGroup_AddToGroup(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsItemGroup_RemoveFromGroup")]
	public static extern void QGraphicsItemGroup_RemoveFromGroup(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsItemGroup_BoundingRect")]
	public static extern QRectF QGraphicsItemGroup_BoundingRect(void* c_this);
	[LinkName("QGraphicsItemGroup_Paint")]
	public static extern void QGraphicsItemGroup_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsItemGroup_IsObscuredBy")]
	public static extern bool QGraphicsItemGroup_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsItemGroup_OpaqueArea")]
	public static extern QPainterPath QGraphicsItemGroup_OpaqueArea(void* c_this);
	[LinkName("QGraphicsItemGroup_Type")]
	public static extern int32 QGraphicsItemGroup_Type(void* c_this);
}